--- a/src/styles.scss
+++ b/src/styles.scss
@@ -335,7 +335,7 @@ app-site-header,
 
 /* Section styles */
 section {
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
   position: relative;
   scroll-snap-align: start;
